--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Characters</string>
-    <string name="loading_error">An error occurred while loading the characters</string>
+    <string name="loading_characters_error">Error while loading characters</string>
     <string name="retry">Retry</string>
     <string name="status_label">Status: </string>
     <string name="occupation_label">Occupation: </string>
